syntax = "proto3";

package model;
option java_multiple_files = true;
option java_package = "br.com.rh.proto";

message EmployeeRequest {
  int64 id = 1;
  string name = 2;
  double salary = 3;
  int64 uoId = 4;
  string email = 5;
}

message EmployeeResponse {
  int64 protocolNumber = 1;
}

message ChangeUoRequest {
  int64 employeeId = 1;
  int64 uoId = 2;
}

message ChangeUoResponse {
  int64 protocolNumber = 1;
}